# Leistungskurve_ma_lu

./: README.md  power_curve.py  pyproject.toml
