[project]
name = "Leistungskurve_ma_lu"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Maria, Lucie", email = "am7029@mci4me.at"},
]
dependencies = []
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
